--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "tiny-emitter": "^2.1.0",
+    "vee-validate": "^4.3.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
