--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "tiny-emitter": "^2.1.0",
     "vee-validate": "^4.3.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue-toastification": "^2.0.0-rc.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.0",
